fixed the card spacing by adjusting the text sizes

--- a/styles/styleindex.css
+++ b/styles/styleindex.css
@@ -4,7 +4,6 @@ body{
     height: fit-content;
 }
 
-
 .container_centered {
     display: flex;
     justify-content: center;
@@ -40,22 +39,33 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
-#img{
+#img {
     height: 20vh;
 }
-.card{
+
+.card {
     background-color: #FF7F50;
     color: #281C31;
     height: fit-content;
 }
+
+.card-body {
+    margin: 1.5%;
+    padding: 2%;
+    align-items: center;
+    font-size: 15pt;
+}
+
 .center {  
     text-align: center;
 }
 
 .texttitle{
-    font-size: 14pt;
+    font-size: 12pt;
 }
+
 .text{
     font-size: 5pt;
 }
@@ -69,7 +79,6 @@ body{
     width: 100vw;
 }
 
-
 #reviews{
     grid-area: community;
 }
@@ -81,11 +90,14 @@ body{
     padding-top: 10%;
     flex-direction: column;
     align-items: center;
-
 }
 
 #content1 {
     grid-area: content1;
     max-width: 99vw;
     padding-bottom: 10vh;
+}
+
+.card-text {
+    font-size: 11pt;
 }
